--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^5.0.0",
     "sass": "^1.69.5",
     "styled-components": "^6.1.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
