--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dota_heroes",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ZaharKhach.github.io/DotaHeroesPortal/",
+  "homepage": "https://ZaharKhach.github.io/DotaHeroes/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
